<resources>
    <string name="app_name">Textify</string>
    <string name="title_activity_preview">Preview</string>
    <string name="title_edit">Edit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="include_image_title">Include Image?</string>
    <string name="include_image">Would you like to include image</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="preview_image">Preview Image</string>
    <string name="processing">Processing…</string>
    <string name="use_saved_images">Saved Images</string>
    <string name="camera">Camera</string>
    <string name="photo_capture_success">Photo captured succeeded</string>
    <string name="saved_images">Saved Images</string>

    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>

</resources>