<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:foreground="@drawable/ic_launcher_foreground"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/change_language"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.49">


        <Button
            android:id="@+id/use_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#777575"
            android:drawableStart="@android:drawable/ic_menu_camera"
            android:text="@string/camera"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Button
            android:id="@+id/use_saved_images"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#777575"
            android:drawableStart="@android:drawable/ic_menu_gallery"
            android:text="@string/use_saved_images"
            app:layout_constraintTop_toBottomOf="@+id/use_camera" />

        <Button
            android:id="@+id/change_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@android:drawable/stat_notify_chat"
            android:backgroundTint="#777575"
            android:text="@string/change_language" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

